# aiida-mechanical

./: .copier-answers.yml  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: .ci.yml  ci.yml  deploy-myst.yaml
docs/: developer.md  index.md  myst.yml  quickstart.md
examples/: example_01.py
examples/structures/: Pb.xsf  Si.xsf
src/aiida_mechanical/: __about__.py
src/aiida_mechanical/calculations/: __init__.py  structure.py  thermo_pw.py
src/aiida_mechanical/data/: __init__.py  cleavaged_structure.py  faulted_structure.py  gliding_systems.py  printer.py  system.py
src/aiida_mechanical/data/structures/cif/: Al.cif  AsTe.cif  CrH.cif  Cu.cif  HfAlPd2.cif  IrS2.cif  KCl.cif  MgB2.cif  MoN.cif  NaCl.cif  Nb3Sn.cif  NbCoSb.cif  NiTi.cif  TaRu3C.cif  TaSe2.cif  TiAlPt.cif  TiSbRu.cif  V.cif  VC.cif  YSnPd2.cif  ZrAlNi2.cif  ZrGaNi2.cif  ZrRuSb.cif
src/aiida_mechanical/data/structures/xyz/: icsd-659260-IrS2-205-C2.xyz  icsd-77392-TaRu3C-221-E21.xyz  mpds-S1605628-AsTe-225-B1.xyz  mpds-S1612207-NbCoSb-216-C1b.xyz  mpds-S378780-Nb3Sn-223-A15.xyz
src/aiida_mechanical/parsers/: __init__.py  thermo_pw.py
src/aiida_mechanical/tools/: __init__.py  analyser.py  builder.py  cut.py  gliding_systems.py  plots.py  structure.py  structure_builder.py  structure_utils.py  structures.py  workchain.py
src/aiida_mechanical/workflows/: __init__.py  base.py
src/aiida_mechanical/workflows/dislocation/: __init__.py  esfe.py  gsfe.py  gsfe_relax.py  isfe.py  layer_relax.py  mixins.py  sfebase.py  surface.py  twinning.py  usfe.py
src/aiida_mechanical/workflows/dislocation/protocols/: gsfe.yaml  gsfe_relax.yaml  isfe.yaml  layer_relax.yaml  sfebase.yaml  surface.yaml  twinning.yaml  usfe.yaml
src/aiida_mechanical/workflows/protocols/: base.yaml
src/aiida_thermo_pw/: __init__.py
src/aiida_thermo_pw/calculations/: __init__.py  thermo_pw.py
src/aiida_thermo_pw/data/: __init__.py  printer.py
src/aiida_thermo_pw/parsers/: __init__.py  thermo_pw.py
src/aiida_thermo_pw/tools/: __init__.py  analyser.py  structures.py
src/aiida_thermo_pw/workflows/: base.py
tests/: conftest.py  test_example.py
utils/: plot.py
