[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiida-mechanical"
dynamic = ["version"]
description = "The official AiiDA plugin for mechanical properties"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["aiida", "workflows"]
authors = [{name = "Yiming Zhang", email = "zhangyiming1998@gmail.com"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AiiDA",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "aiida_core[atomic_tools]~=2.6",
  "aiida-quantumespresso>=4.11",
  "aiida-pseudo~=1.1",
  "click~=8.0",
  "importlib_resources",
  "jsonschema",
  "numpy",
  "pydantic~=2.0",
  "packaging",
  "qe-tools~=2.0",
  "xmlschema~=2.0",
]

[project.optional-dependencies]
docs = [
  "sphinx~=6.2.1",
  "sphinx-copybutton~=0.5.2",
  "sphinx-book-theme~=1.0.1",
  "sphinx-click~=4.4.0",
  "sphinx-design~=0.4.1",
  "sphinxcontrib-details-directive~=0.1.0",
  "sphinx-autoapi~=3.0.0",
  "myst_parser~=1.0.0",
]
tests = [
  "pgtest~=1.3",
  "pytest>=6.0",
  "pytest-regressions~=2.3",
]
pre-commit = [
  "pre-commit~=2.17",
  "pylint~=2.17.2",
  "pylint-aiida~=0.1.1",
  "toml",
]

[dependency-groups]
dev = [
  "aiida-mechanical[docs,tests,pre-commit]",
]

[tool.hatch.version]
path = "src/aiida_mechanical/__about__.py"

[tool.hatch.envs.default]
installer = 'uv'

[tool.hatch.envs.docs]
features = ["docs"]
scripts.build = "cd docs && myst build"
scripts.serve = "cd docs && myst start"

[tool.hatch.envs.pre-commit]
features = ["pre-commit"]
scripts.install = "pre-commit install"
scripts.run = "pre-commit run {args}"

[tool.hatch.envs.hatch-test]
features = ["tests"]
randomize = false
parallel = false
run = "pytest {args}"

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.ruff]
lint.ignore = [
    "TRY003",  # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
    "EM101",   # https://docs.astral.sh/ruff/rules/raw-string-in-exception/
    "EM102",   # https://docs.astral.sh/ruff/rules/f-string-in-exception/
    "PLR2004", # https://docs.astral.sh/ruff/rules/magic-value-comparison/
    "FBT002",  # https://docs.astral.sh/ruff/rules/boolean-default-value-positional-argument/
    "TID252",  # https://docs.astral.sh/ruff/rules/relative-imports/
]
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["INP001", "S101"]

[project.entry-points.'aiida.calculations']
"mechanical.thermo_pw" = "aiida_mechanical.calculations.thermo_pw:Thermo_pwCalculation"

[project.entry-points.'aiida.parsers']
"mechanical.thermo_pw" = "aiida_mechanical.parsers.thermo_pw:Thermo_pwParser"

[project.entry-points.'aiida.workflows']
"mechanical.thermo_pw.base" = "aiida_mechanical.workflows.base:Thermo_pwBaseWorkChain"

[tool.flynt]
line-length = 120
fail-on-change = true

[tool.isort]
force_sort_within_sections = true
include_trailing_comma = true
line_length = 120
multi_line_output = 3  # this configuration is compatible with yapf

[tool.pydocstyle]
ignore = [
    'D104',
    'D202',
    'D203',
    'D213'
]

[tool.pylint.master]
load-plugins = ['pylint_aiida','pylint.extensions.no_self_use']

[tool.pylint.format]
max-line-length = 120

[tool.pylint.tool-check]
generated-members = 'self.exit_codes.*'

[tool.pylint.messages_control]
disable = [
    'duplicate-code',
    'fixme',
    'inconsistent-return-statements',
    'import-outside-toplevel',
    'locally-disabled',
    'logging-format-interpolation',
    'no-else-raise',
    'too-many-arguments',
    'too-many-ancestors',
    'too-many-branches',
    'too-many-locals',
    'use-dict-literal',
]

[tool.pylint.basic]
good-names = [
    'i',
    'j',
    'k',
    'SsspFamily',
    'StructureData',
    'SinglefileData',
    'UpfData',
    'HpCalculation',
    'PwCalculation',
]

[tool.pytest.ini_options]
minversion = '6.0'
testpaths = [
    'tests',
]
filterwarnings = [
    'ignore:Object of type .* not in session, .* operation along .* will not proceed:sqlalchemy.exc.SAWarning',
    'ignore:Creating AiiDA configuration folder.*:UserWarning',
    'ignore::DeprecationWarning:frozendict:',
    'ignore::DeprecationWarning:pkg_resources:',
    'ignore::DeprecationWarning:sqlalchemy_utils:',
]

[tool.yapf]
align_closing_bracket_with_visual_indent = true
based_on_style = 'google'
coalesce_brackets = true
column_limit = 120
dedent_closing_brackets = true
indent_dictionary_value = false
split_arguments_when_comma_terminated = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    py{38,39,310,311}
    py38-pre-commit

[testenv]
description = Run the pytest tests
usedevelop=True
extras = tests
commands = pytest {posargs}

[testenv:py38-pre-commit]
description = Run the pre-commit checks
extras =
    tests
    pre-commit
commands = pre-commit run {posargs}
"""
